# Label-Printer-Hub

./: .editorconfig  .gitguardian.yaml  .gitignore  .gitleaks.toml  .releaserc.json  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  commitlint.config.cjs  docker-compose.smoke.yml  package.json
.gemini/: config.yaml  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  alembic.ini.runtime  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_phase7b_datetime_tz.py  20260517_phase7c_api_keys.py  20260518_phase7c_pat_prefix.py  20260605_phase1k1a_drop_preset_template_id.py  20260605b_jobs_template_key_nullable.py  20260623_phase1k3_preset_content_type_tape_mm.py  2026_05_16_0001_phase5_initial.py  42fbd015698d_printers_audit_and_backfill.py  4babfb84a9a0_add_printer_state_table.py  54f963fdb994_add_templates_table.py  752faeca7523_add_presets_table.py  a0516c04278c_add_print_batches_table.py  b1a0b028aabb_add_printers_table.py  b2668b6e8845_add_printer_status_cache_table.py  da865401716d_add_printer_slug_column.py  e0d573b37f5b_add_jobs_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: error_handlers.py
backend/app/auth/: dependencies.py  key_generator.py  scope_deps.py  verifier.py
backend/app/db/: engine.py  lifespan.py  session.py
backend/app/integrations/: README.md  __init__.py  base.py  registry.py
backend/app/models/: __init__.py  api_key.py  job.py  preset.py  print_batch.py  printer.py  printer_state.py  printer_status_cache.py  tape.py  template.py
backend/app/printer_backends/: __init__.py  base.py  batch_helper.py  brother_ql_backend.py  exceptions.py  mock_backend.py  ptouch_backend.py  snmp_helper.py  status_query.py
backend/app/printer_models/: base.py  pt.py  ql.py  registry.py
backend/app/repositories/: __init__.py  api_keys.py  jobs.py  presets.py  print_batches.py  printer_state.py  printer_status_cache.py  printers.py  templates.py
backend/app/schemas/: __init__.py  _datetime.py  batch_read.py  content_type.py  job.py  label_data.py  label_data_item.py  lookup.py  preset.py  print_batch.py  print_request.py  print_response.py  printer.py  printer_admin.py  printer_config.py  problem.py  readiness.py  tape_geometry.py  template.py  template_read.py  webhook.py
backend/app/seed/: __init__.py  printers.yaml.example
backend/app/services/: audit_redaction.py  backend_router.py  batch_dispatch.py  cleanup_task.py  errors.py  event_bus.py  grocy_client.py  job_lifecycle.py  job_store.py  job_store_sqlite.py  label_renderer.py  layout_engine.py  lookup_service.py  preset_service.py  print_queue.py  print_service.py  printer_admin_service.py  printer_config_loader.py  printer_identity.py  printer_model_registry.py  rate_limiter.py  readiness.py  snipeit_client.py  spoolman_client.py  status_block.py  svg_renderer.py  tape_registry.py  tape_specs_pt.py  template_loader.py
backend/docs/: brother-snmp-oids.md  brother-status-block.md  ptouch-integration.md
backend/scripts/: generate_template_svgs.py  smoke_first_print.py  smoke_first_print_batch.py  smoke_layout_engine_12mm_v4.py
backend/tests/: conftest.py
backend/tests/_helpers/: __init__.py  status.py
backend/tests/api/: test_openapi_completeness.py
(+348 files in other folders)
