[project]
name = "label-printer-hub-backend"
version = "0.0.0-dev"
description = "Self-hosted label printer hub for Brother PT/QL series — backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Björn Strausmann", email = "strausmannservices@googlemail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "pillow>=11.0",
    "qrcode[pil]>=8.0",
    "brother-ql>=0.9.4",
    "ptouch>=1.1.0",
    "pysnmp>=6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.entry-points."label_hub.integrations"]
snipeit = "app.integrations.snipeit.plugin:SnipeITPlugin"
spoolman = "app.integrations.spoolman.plugin:SpoolmanPlugin"
grocy = "app.integrations.grocy.plugin:GrocyPlugin"

[project.entry-points."label_hub.printer_backends"]
mock = "app.printer_backends.mock_backend:MockPrinterBackend"
ptouch = "app.printer_backends.ptouch_backend:PTouchBackend"

[project.entry-points."label_hub.printer_models"]
pt-series = "app.printer_models.pt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "A",                # builtins shadowing
    "C4",               # comprehensions
    "T20",              # flake8-print
    "SIM",              # simplify
    "ARG",              # unused args
    "PTH",              # use pathlib
    "RUF",              # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]   # pytest fixtures

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_decorators = false   # FastAPI/pytest decorators

[[tool.mypy.overrides]]
module = ["brother_ql.*", "ptouch.*", "pysnmp.*", "qrcode.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "hardware: requires real Brother printer hardware (skipped by default; opt in with --hardware)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
